# cli-satellites

./: .env  pyproject.toml  requirements.txt
data/: satellite_database.xlsx  ~$satellite_database.xlsx
src/: info.py  list.py  main.py  map.py  satellite_position_service.py  satellite_search_service.py  utils.py
src/cli/: utils.py
src/cli/commands/: info.py  list.py  main.py  map.py  satellite_list.py
src/libs/: satellite_position_service.py  satellite_search_service.py
