[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

dependencies = [
    'requests',
    'PIL'

]
[project]
name = "cli-satellites"
version = "0.1"
requires-python = ">=3.8"
maintainers = [{ name = "Adriano Weid", email = "adrianoweid123@gmail.com" }]
description = "A lovely satellite viewer in the CLI"
dependencies = [
    'requests',
    'PIL'

]
